# todo-bridge

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  demo_tasks.csv  demo_tasks.md  pyproject.toml  requirements.txt
src/: __init__.py
src/todo_converter/: __init__.py  __main__.py  base.py  converter.py  csv_converter.py  markdown_converter.py  models.py
tests/: test_csv_converter.py  test_markdown_converter.py
